--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.7"
+
 services:
   mongodb:
     image: mongo:6.0.6
@@ -13,27 +14,9 @@ services:
       retries: 5
     networks:
       - backend_services
-  rabbitmq:
-    image: rabbitmq:3.11.17-management-alpine
-    container_name: 'rabbitmq'
-    restart: always
-    environment:
-      - "RABBITMQ_DEFAULT_USER=username"
-      - "RABBITMQ_DEFAULT_PASS=password"
-    ports:
-      - 15672:15672
-      - 5672:5672
-    healthcheck:
-      test: ["CMD", "rabbitmqctl", "status"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-    volumes:
-      - ../../rabbitmq_enabled_plugins:/etc/rabbitmq/enabled_plugins
-    networks:
-      - backend_services
+
   order-service:
-    image: ramymohamed/order-service-l8:latest
+    image: docker.io/lolaakin/order-service:latest  # Image for order-service
     container_name: 'order-service'
     restart: always
     ports:
@@ -44,19 +27,18 @@ services:
       timeout: 10s
       retries: 5
     environment:
-      - ORDER_QUEUE_HOSTNAME=rabbitmq
-      - ORDER_QUEUE_PORT=5672
-      - ORDER_QUEUE_USERNAME=username
-      - ORDER_QUEUE_PASSWORD=password
-      - ORDER_QUEUE_NAME=orders
+      - ORDER_QUEUE_HOSTNAME=my-eventbus-8915.servicebus.windows.net  # Azure Event Bus namespace
+      - ORDER_QUEUE_PORT=5671  # Azure Event Bus port (for AMQP over TLS)
+      - ORDER_QUEUE_USERNAME=RootManageSharedAccessKey  # Azure Event Bus Shared Access Key
+      - ORDER_QUEUE_PASSWORD=HLF3Z+u8+fNAbr5THN0iRJ1PLby2GGObJ+ASbCfceXI=  # Azure Event Bus Secret Key
+      - ORDER_QUEUE_NAME=orders  # Queue name in Azure Event Bus
       - ORDER_QUEUE_RECONNECT_LIMIT=3
+      - ORDER_QUEUE_TRANSPORT=tls  # Secure connection to Azure Event Bus
     networks:
       - backend_services
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
+
   virtual-customer:
-    image: ramymohamed/virtual-customer-l8:latest
+    image: docker.io/lolaakin/virtual-customer:latest  # Image for virtual-customer
     container_name: 'virtual-customer'
     restart: always
     environment:
@@ -67,6 +49,7 @@ services:
     depends_on:
       order-service:
         condition: service_healthy
+
 networks:
   backend_services:
     driver: bridge
