--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,20 +27,21 @@ services:
       timeout: 10s
       retries: 5
     environment:
-      - ORDER_QUEUE_PORT=5671  # Azure Event Bus port (for AMQP over TLS)
-      - ORDER_QUEUE_HOSTNAME=my-eventbus-8915.servicebus.windows.net
+      - ORDER_QUEUE_URI=amqps://my-eventbus-8915.servicebus.windows.net
+      - ORDER_QUEUE_PORT=5671
       - ORDER_QUEUE_USERNAME=RootManageSharedAccessKey
       - ORDER_QUEUE_PASSWORD=HLF3Z+u8+fNAbr5THN0iRJ1PLby2GGObJ+ASbCfceXI=
- # Azure Event Bus Secret Key
-      - ORDER_QUEUE_NAME=orders  # Queue name in Azure Event Bus
-      - ORDER_QUEUE_RECONNECT_LIMIT=3
-      - ORDER_QUEUE_TRANSPORT=tls  # Secure connection to Azure Event Bus
+      - ORDER_QUEUE_NAME=orders
+      - ORDER_DB_URI=mongodb://mongodb:27017
+      - ORDER_DB_NAME=orderdb
+      - ORDER_DB_COLLECTION_NAME=orders
       - USE_WORKLOAD_IDENTITY_AUTH=false
     networks:
       - backend_services
 
   virtual-customer:
-    image: lolaakin/virtual-customer:latest  # Image for virtual-customer
+    # image: lolaakin/virtual-customer:latest  # Image for virtual-customer
+    image: ramymohamed/virtual-customer-l8:latest
     container_name: 'virtual-customer'
     restart: always
     environment:
